# okf-rag

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  OKF-RAG-BENCHMARK.md  OKR-RAG-BENCHMARK.md  README-CN.md  README-OKF-RAG.md  README-OKR-RAG.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  delete-u3d-okf-rag-workspace-admin.ps1  requirements.txt  setup-for-agent.md
.cargo/: config.toml
.codex/: config.toml.example
.okf-rag/: README.md
.okr-rag/: README.md
crates/okf-rag/: Cargo.toml  build.rs
crates/okf-rag/src/: main.rs
data/: external-okf-source-18f.md  external-okf-source-atiim.md  external-okf-source-gitlab.md  knowledge-memory-benchmark.json
okf-rag/: README.md
okf-rag-workspace/: README.md  index.md
okr-rag/: README.md
okr-rag-workspace/: README.md  index.md
scripts/: bench_beir_zvec.py  bench_knowledge_memory.py  bench_mempalace_zvec.py  bench_minilm_zvec.py  bench_okf_daemon_incremental.js  bench_okf_hybrid_memory.py  bench_okf_relationships.js  bench_okr_hybrid_memory.py  bench_real_okf_knowledge_memory.py  bench_recall_minilm_zvec.py  compile_okf_with_llmwiki.js  compile_okf_with_llmwiki.test.js  diagnostics.js  diagnostics.test.js  knowledge_memory_index.py  llmwiki_env.js  llmwiki_env.test.js  minilm_onnx_embed.py  okf_generation.js  okf_llmwiki_daemon.js  okf_llmwiki_daemon.test.js  okf_maintain.js  okf_maintain.test.js  okf_pipeline.js  okf_relationships.js  okf_relationships.test.js  openai_stream_adapter.js  package_okf_rag_release.js  package_okr_rag_release.js  prove_knowledge_memory_system.py  zvec_minilm_demo.py  (+2 more)
(+18 files in other folders)
