[package]
name = "okf-rag"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
ndarray = "=0.17.2"
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["ndarray", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokenizers = { version = "0.23.1", default-features = false, features = ["fancy-regex"] }
zvec = { path = "../../third_party/zvec-rust/zvec" }
